# do-python-release

./: README.md  pyproject.toml
do_python_release/: __init__.py
